--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ function getTheme () {
 
 <div id="game-area" tabindex="0">
 </div>
-<script type="text/javascript" src="./js/snake.js"></script>
-<script type="text/javascript" src="./js/init.js"></script>
+<script type="text/javascript" src="./src/snake.js"></script>
+<script type="text/javascript" src="./src/init.js"></script>
 <script type="text/javascript">
   function go_full_screen() {
     var elem = document.documentElement;
